2008-08-26  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug 1090 - Label somtimes returns natural_width < min_width

	* clutter/clutter-label.c:
	(clutter_label_get_preferred_width): Check that the width of the
	layout is always greater than 0. (Johan Bilien)

2008-08-19  Neil Roberts  <neil@o-hand.com>

	Bug 1103 - Two typos in clutter documentation

	* doc/reference/clutter/subclassing-ClutterActor.xml: Update the
	custom actor example since the Cogl API was changed to namespace
	all of the path related functions in cogl_path_*. Thanks to Nati
	Berkover.
	
	* clutter/clutter-score.c: Add missing parameter in example of
	calling clutter_score_start().

2008-08-18  Neil Roberts  <neil@o-hand.com>

	Bug 1085 - Cursor is in wrong position on ClutterEntry if set
	x-align property

	* clutter/clutter-entry.c (clutter_entry_paint): When calculating
	the position to draw the cursor at, take into account the
	alignment of the text. Queue a redraw when the x-align property is
	changed.

2008-08-07  Neil Roberts  <neil@o-hand.com>

	Bug 1091 - WM_MOUSEWHEEL (scroll-event) not handled correctlly

	* clutter/win32/clutter-event-win32.c (message_translate): The
	coordinates in a WM_MOUSEWEEL message are given relative to the
	screen so they need to be converted to client coordinates before
	use. Thanks to Roman Yazmin.

2008-08-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-child-meta.c:
	(clutter_child_meta_set_property),
	(clutter_child_meta_class_init): Make the :container and
	:actor properties of ChildMeta construct-only, to allow
	bindings to actually use ChildMeta without abusing the API.

	* clutter/clutter-container.c (create_child_meta): Instead of
	setting the members of the ChildMeta structure, use the
	constructor properties.

2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-keysyms.h: Resync with keysymdef.h inside Xorg.

2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c: