@@ -1288,6 +1288,7 @@ clutter_script_get_object
 clutter_script_get_objects
 clutter_script_unmerge_objects
 clutter_script_ensure_objects
+clutter_script_list_objects
 
 <SUBSECTION>
 ClutterScriptConnectFunc
